--- a/LibraryDream/LibraryDream/appsettings.json
+++ b/LibraryDream/LibraryDream/appsettings.json
@@ -1,12 +1,10 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LibraryDream-b6393395-6cb8-4c58-9ed2-48833ba8b618;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": { "conn": "Server=localhost;Database=LibraryDream; Trusted_Connection=True; TrustServerCertificate=Yes" }
 }
